# accounts/models.py
@@ -5,7 +5,7 @@ from django.dispatch import receiver
 from django.contrib.auth import get_user_model
 from django.utils import timezone
 from rest_framework.authtoken.models import Token
-from blog.models import Post, SubscribesList
+from blog.models import Post, SubscribesList, ReadedPostsList
 from datetime import datetime
 
 # set the email field in user model unique and required
@@ -23,6 +23,10 @@ def create_subscribes_list(sender, instance=None, created=False, **kwargs):
     if created:
         SubscribesList.objects.create(owner=instance)
 
+@receiver(post_save, sender=settings.AUTH_USER_MODEL)
+def create_readed_posts_list(sender, instance=None, created=False, **kwargs):
+    if created:
+        ReadedPostsList.objects.create(owner=instance)
 
 
 def get_subs_list(self):
@@ -34,7 +38,42 @@ def get_posts_from_date(self, start_date):
     posts = Post.objects.filter(owner=self, created_at__range=[start_date, today])
     return posts
 
+def check_in_readed_posts(self, data):
+    my_r_list = ReadedPostsList.objects.get(owner=self)
+    post_id = data.get('post', None)
+    if post_id is not None:
+        try:
+            res = my_r_list.were_read.all().get(post_id=post_id)
+            return True
+        except Exception as e:
+            print(e)
+    return False
+
+def check_in_feed(self, data):
+    try:
+        my_subs_list = SubscribesList.objects.get(owner=self)
+        post = Post.objects.get(id=data.get('post', None))
+        post_autor = get_user_model().objects.get(post=post)
+        subscribe = my_subs_list.subscribed_to.get(to=post_autor)
+        if post.created_at > subscribe.subscribed_time:
+            return True
+        return False
+    except:
+        return False
+
+
 get_user_model().add_to_class("get_subs_list", get_subs_list)
 get_user_model().add_to_class("get_posts_from_date", get_posts_from_date)
+get_user_model().add_to_class("check_in_readed_posts", check_in_readed_posts)
+get_user_model().add_to_class("check_in_feed", check_in_feed)
 
 
+"""
+ if post_id is not None:
+        try:
+            res = my_r_list.were_read.all().get(post_id=post_id)
+            return True
+        except Exception as e:
+            print(e)
+            return False
+"""
