# openapi-schema.yml
@@ -3,82 +3,6 @@ info:
   title: ''
   version: ''
 paths:
-  /api/users/feed/:
-    get:
-      operationId: listUsers
-      description: ''
-      parameters: []
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
-          description: ''
-      tags:
-      - api
-  /api/users/subscribes/:
-    get:
-      operationId: listSubscribes
-      description: ''
-      parameters: []
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Subscribe'
-          description: ''
-      tags:
-      - api
-    post:
-      operationId: createSubscribe
-      description: ''
-      parameters: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Subscribe'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/Subscribe'
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/Subscribe'
-      responses:
-        '201':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Subscribe'
-          description: ''
-      tags:
-      - api
-  /api/users/{id}/posts/:
-    get:
-      operationId: retrieveUser
-      description: ''
-      parameters:
-      - name: id
-        in: path
-        required: true
-        description: ''
-        schema:
-          type: string
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-          description: ''
-      tags:
-      - api
   /api/users/{id}/:
     get:
       operationId: retrieveUser
@@ -146,6 +70,152 @@ paths:
           description: ''
       tags:
       - api
+  /api/blog/feed/:
+    get:
+      operationId: listPosts
+      description: ''
+      parameters:
+      - name: page
+        required: false
+        in: query
+        description: A page number within the paginated result set.
+        schema:
+          type: integer
+      - name: user_posts_page_size
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: integer
+                    example: 123
+                  next:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?page=4
+                  previous:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?page=2
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Post'
+          description: ''
+      tags:
+      - api
+  /api/blog/{id}/posts/:
+    get:
+      operationId: listPosts
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Post'
+          description: ''
+      tags:
+      - api
+  /api/blog/subscribes/:
+    get:
+      operationId: listSubscribes
+      description: ''
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Subscribe'
+          description: ''
+      tags:
+      - api
+    post:
+      operationId: createSubscribe
+      description: ''
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Subscribe'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Subscribe'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Subscribe'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Subscribe'
+          description: ''
+      tags:
+      - api
+  /api/blog/readed/:
+    get:
+      operationId: listSubscribes
+      description: ''
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Subscribe'
+          description: ''
+      tags:
+      - api
+    post:
+      operationId: createSubscribe
+      description: ''
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Subscribe'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Subscribe'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Subscribe'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Subscribe'
+          description: ''
+      tags:
+      - api
   /api/users/api-token-auth/:
     post:
       operationId: createAuthToken
@@ -174,7 +244,7 @@ paths:
           description: ''
       tags:
       - api
-  /api/posts/:
+  /api/blog/:
     post:
       operationId: createPost
       description: "Post creation endpoint\n\n    only for authenticated users"
@@ -199,12 +269,12 @@ paths:
           description: ''
       tags:
       - api
-  /api/users/subscribes/{sub_id}/:
+  /api/blog/subscribes/{id}/:
     delete:
       operationId: destroySubscribe
       description: ''
       parameters:
-      - name: sub_id
+      - name: id
         in: path
         required: true
         description: ''
@@ -253,6 +323,27 @@ components:
       - username
       - email
       - password
+    Post:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        title:
+          type: string
+          maxLength: 100
+        text:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+          readOnly: true
+        owner:
+          type: string
+          readOnly: true
+      required:
+      - title
+      - text
     Subscribe:
       type: object
       properties:
@@ -278,24 +369,3 @@ components:
       required:
       - username
       - password
-    Post:
-      type: object
-      properties:
-        id:
-          type: integer
-          readOnly: true
-        title:
-          type: string
-          maxLength: 100
-        text:
-          type: string
-        created_at:
-          type: string
-          format: date-time
-          readOnly: true
-        owner:
-          type: string
-          readOnly: true
-      required:
-      - title
-      - text
